migliorata riusabilità post microservice